# ilold-svm

./: .gitignore  Cargo.toml  LICENSE  README.md
crates/ilold-cli/: Cargo.toml
crates/ilold-cli/src/: analyze.rs  colors.rs  context.rs  deps_view.rs  explore.rs  fmt.rs  help.rs  interactive.rs  main.rs
crates/ilold-cli/tests/: print_solana_result_format.rs
crates/ilold-core/: Cargo.toml
crates/ilold-core/src/: lib.rs  util.rs
crates/ilold-core/src/callgraph/: builder.rs  types.rs
crates/ilold-core/src/cfg/: builder.rs  error.rs  mod.rs  modifier.rs  types.rs
crates/ilold-core/src/classify/: entry_points.rs  mod.rs
crates/ilold-core/src/depgraph/: build.rs  mod.rs  order.rs
crates/ilold-core/src/exploration/: add_step_solidity.rs  commands.rs  mod.rs  session.rs  timeline.rs
crates/ilold-core/src/journal/: export.rs  mod.rs
crates/ilold-core/src/model/: common.rs  contract.rs  decl_id.rs  expression.rs  function.rs  mod.rs  modifier.rs  project.rs  statement.rs
crates/ilold-core/src/narrative/: formatter.rs  function.rs  mod.rs  sequence.rs  trace.rs  types.rs
crates/ilold-core/src/parse/: error.rs  mod.rs  solar_frontend.rs  solc_frontend.rs  span.rs
crates/ilold-core/src/pathtree/: config.rs  mod.rs  types.rs  walker.rs
crates/ilold-core/src/sequence/: analysis.rs  builder.rs  mod.rs  types.rs
crates/ilold-core/src/slicing/: backward.rs  extract.rs  flatten.rs  forward.rs  mod.rs  types.rs
crates/ilold-core/tests/: callgraph_test.rs  depgraph_test.rs  integration_test.rs  pathtree_test.rs  sequence_test.rs  slicing_test.rs
crates/ilold-evm-mcp/: Cargo.toml
crates/ilold-evm-mcp/src/: client.rs  error.rs  lib.rs  server.rs  tools.rs
crates/ilold-evm-mcp/tests/: dispatch_httpmock.rs
crates/ilold-mcp/: Cargo.toml
crates/ilold-mcp/src/: client.rs  error.rs  lib.rs  narration.rs  schema.rs  server.rs  tools.rs
crates/ilold-mcp/tests/: client_httpmock.rs  handler_use_flow.rs  mcp_stdio_full_flow.rs  mcp_stdio_lists_tools.rs  schema_consistency.rs
crates/ilold-render/: Cargo.toml
crates/ilold-render/src/: colors.rs  fmt.rs  lib.rs  solana.rs
crates/ilold-render/tests/: snapshot_render.rs
crates/ilold-render/tests/snapshots/: coverage.txt  error.txt  step_added.txt
crates/ilold-session-core/: Cargo.toml
crates/ilold-session-core/src/: lib.rs  runtime_trace.rs
crates/ilold-session-core/src/exploration/: access.rs  assign_operator.rs  canvas.rs  mod.rs  scenario.rs  session.rs
crates/ilold-session-core/src/journal/: export.rs  types.rs
crates/ilold-solana-core/: Cargo.toml
crates/ilold-solana-core/src/: error.rs  ingest.rs  lib.rs  overlay.rs  view.rs
crates/ilold-solana-core/src/decode/: account.rs  borsh.rs  instruction.rs  mod.rs
crates/ilold-solana-core/src/encode/: borsh.rs  mod.rs
crates/ilold-solana-core/src/execute/: builder.rs  fork.rs  mod.rs  pda.rs  vm.rs
crates/ilold-solana-core/src/exploration/: add_step.rs  commands.rs  execute.rs  mod.rs
crates/ilold-solana-core/src/idl/: mod.rs  parse.rs  types.rs
crates/ilold-solana-core/src/model/: account.rs  instruction.rs  mod.rs  program.rs  project.rs
crates/ilold-solana-core/tests/: decode_borsh.rs  e2e_lever.rs  encode_roundtrip.rs  execute_call.rs  execute_readonly.rs  execute_state_ops.rs  fork.rs  idl_parse.rs  model_and_ingest.rs  overlay_callfailed.rs  pda.rs  program_view_snapshot.rs  vm.rs
crates/ilold-solana-core/tests/snapshots/: staking_overlay.json  staking_view.json
crates/ilold-solana-core/tests/snapshots/funcs_who_pda_baseline/: lever_pda_initialize.json  lever_pda_switch_power.json  relations_pda_init_base.json  relations_pda_test_relation.json  staking_funcs.json  staking_pda_add_rewards.json  staking_pda_stake.json  staking_pda_unstake.json  staking_who_pool.json  staking_who_user_stake.json
crates/ilold-solana-core/tests/snapshots/t_r49_pre/: lever_funcs.json  staking_pda_claim_rewards.json  staking_pda_initialize_pool.json
crates/ilold-web/: Cargo.toml
crates/ilold-web/frontend/: README.md  package-lock.json  package.json  svelte.config.js  vite.config.ts
crates/ilold-web/frontend/scripts/: check-program-view.mjs  check-runtime-overlay.mjs
crates/ilold-web/frontend/src/: app.css
crates/ilold-web/frontend/src/lib/: Collapsible.svelte  CommandPalette.svelte  DraggablePanel.svelte  SearchModal.svelte  SearchPanel.svelte
crates/ilold-web/frontend/src/lib/api/: rest.ts  session.ts  types.ts  ws.ts
crates/ilold-web/frontend/src/lib/canvas/: program.ts  scenarios.ts
crates/ilold-web/frontend/src/lib/commands/: registry.ts
crates/ilold-web/frontend/src/lib/components/contract/: BranchMenu.svelte  ContextMenu.svelte  FloatingToolbar.svelte  FunctionSidebar.svelte  FunctionSourcePanel.svelte  GraphCanvas.svelte  GraphCanvasFlow.svelte  InstructionSidebar.svelte  Legend.svelte  NodeDetailPanel.svelte  NodeInspector.svelte  SolanaRunForm.svelte  SolanaRunPanel.svelte  StatusBar.svelte  TopBar.svelte
crates/ilold-web/frontend/src/lib/scenarios/: dispatch.ts  name.ts
crates/ilold-web/frontend/src/lib/stores/: graph.svelte.ts  palette.svelte.ts  runtimeOverlay.svelte.ts  search.svelte.ts  search.ts  session.svelte.ts  terminal.svelte.ts  userLabels.svelte.ts
crates/ilold-web/frontend/src/lib/types/: cytoscape-dagre.d.ts
crates/ilold-web/frontend/src/lib/utils/: access.ts  fuzzy.ts  graph-helpers.ts  ide-links.ts  visibility.ts
crates/ilold-web/frontend/src/routes/: +layout.svelte  +page.svelte
crates/ilold-web/frontend/src/routes/contract/[name]/: +page.svelte
crates/ilold-web/frontend/src/routes/search/: +page.svelte
crates/ilold-web/src/: lib.rs  state.rs
crates/ilold-web/src/api/: annotations.rs  contract.rs  depgraph.rs  mod.rs  project.rs  session.rs
crates/ilold-web/src/ws/: handler.rs  mod.rs  pty.rs  search.rs
crates/ilold-web/tests/: contract_source_test.rs  explore_commands_test.rs  instruction_source_test.rs  scenario_commands_test.rs  scenario_endpoints_test.rs  scenario_ws_test.rs  solana_command_pipeline.rs  ws_broadcast_test.rs
tests/fixtures/solana/staking/programs/staking/: Cargo.toml
(+108 files in other folders)
