[workspace]
resolver = "2"
members = [
    "crates/ilold-core",
    "crates/ilold-cli",
    "crates/ilold-web",
    "crates/ilold-evm-mcp",
]

# Shared dependency versions — referenced via { workspace = true } in member crates
[workspace.dependencies]
# svm-solc: auto-download the project's exact solc via svm
foundry-compilers = { version = "0.21", features = ["svm-solc"] }
foundry-compilers-artifacts-solc = "0.21"
petgraph = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rmcp = { version = "1.6", features = ["server", "transport-io"] }

[profile.release]
lto = "thin"
codegen-units = 1
