[workspace]
resolver = "2"
members = [
    "crates/ilold-cli",
    "crates/ilold-web",
    "crates/ilold-session-core",
    "crates/ilold-solana-core",
    "crates/ilold-mcp",
    "crates/ilold-help",
    "crates/ilold-render",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["scab24 <git.seco@protonmail.com>"]
license = "AGPL-3.0-only"
repository = "https://github.com/scab24/ilold"
homepage = "https://github.com/scab24/ilold"
description = "Solana program execution path analyzer and interactive security workbench"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
rmcp = { version = "1.6", features = ["server", "transport-io"] }
schemars = "1.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
codegen-units = 1
