[package]
name = "ilold-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for Ilold: Solana program execution path analyzer"

[[bin]]
name = "ilold"
path = "src/main.rs"

[dependencies]
ilold-solana-core = { path = "../ilold-solana-core" }
ilold-web = { path = "../ilold-web" }
ilold-mcp = { path = "../ilold-mcp" }
ilold-help = { path = "../ilold-help" }
ilold-render = { path = "../ilold-render" }
anyhow = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
colored = "3"
reedline = "0.46"
nu-ansi-term = "0.50"
reqwest = { version = "0.12", features = ["json"] }
serde_json = { workspace = true }
dirs = "6"
