[package]
name = "ilold-mcp"
version.workspace = true
edition.workspace = true
description = "MCP (Model Context Protocol) server exposing Ilold Solana REPL commands as tools"

[dependencies]
ilold-help = { path = "../ilold-help" }
rmcp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
