[package]
name = "ilold-session-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Language-agnostic session and audit-journal types shared by ilold-core (Solidity) and ilold-solana-core."

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }
