[package]
name = "ilold-solana-core"
version.workspace = true
edition.workspace = true
description = "Anchor IDL parser and (later) Solana execution backend for Ilold."

[dependencies]
anchor-lang-idl = { git = "https://github.com/solana-foundation/anchor", tag = "v1.0.2", features = ["build", "convert"] }
solana-address = { version = "2.0", features = ["serde", "decode"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
