[package]
name = "ilold-solana-core"
version.workspace = true
edition.workspace = true
description = "Anchor IDL parser and (later) Solana execution backend for Ilold."

[dependencies]
anchor-lang-idl = { git = "https://github.com/solana-foundation/anchor", tag = "v1.0.2", features = ["build", "convert"] }
solana-address = { version = "2.0", features = ["serde", "decode"] }
solana-clock = "3.0"
solana-keypair = "3.1"
solana-signer = "3.0"
litesvm = "0.11"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
borsh = "1"
bs58 = "0.5"

[dev-dependencies]
tempfile = "3"
