[package]
name = "ilold-web"
version.workspace = true
edition.workspace = true
description = "Web server and interactive viewer for Ilold"

[dependencies]
ilold-core = { path = "../ilold-core" }
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.8"

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
