[package]
name = "ilold-web"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Web server and interactive viewer for Ilold"

[dependencies]
ilold-session-core = { path = "../ilold-session-core" }
ilold-solana-core = { path = "../ilold-solana-core" }
solana-address = { version = "2.0", features = ["serde", "decode"] }
solana-keypair = "3.1"
axum = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
portable-pty = "0.8"
syn = { version = "2", features = ["full"] }
proc-macro2 = { version = "1", features = ["span-locations"] }

[dev-dependencies]
tokio-tungstenite = "0.24"
reqwest = { version = "0.12", features = ["json"] }
futures-util = "0.3"
